--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@chainlink/contracts": "^0.6.1",
     "@openzeppelin/contracts": "^4.8.2",
     "@rainbow-me/rainbowkit": "^0.12.7",
     "ethers": "^5.7.2",
